CHANGELOG

2015-07-01 3.5.0
  * ASQuery implements protocol NSCopying
  * Fix various bugs

2015-06-30 3.4.6
  * Added support of grouping (distinct=3 for example keep the 3 best hits for a distinct key)

2015-06-16 3.4.5
  * New browse method that takes a ASQuery object
  * Remove DSN flag

2015-05-04 3.4.4
  * add new parameter on the Query: setMinProximity & setHighlightingTags

2015-05-04 3.4.3
  * Add new methods to add/update api key
  * Add batch method to target multiple indices
  * Add strategy parameter for the multipleQueries
  * Add new method to generate secured api key from query parameters

2015-04-22 3.4.2
  * Fix issue with geo search

2015-04-10 3.4.1
  * Return the error message from the backend instead of a static message for 4XX

2015-04-10 3.4.0
  * Add new retry logic

2014-11-30 3.2.0
  * Switch .io to .net

2014-11-07 3.1.23
  * Add DSN flag

2014-10-27  3.1.22
  * Add extra optionalWordsMinimumMatched query parameter