@@ -402,10 +402,15 @@
 
 -(void) browseWithQuery:(ASQuery*)query block:(BrowseIteratorHandler)block
 {
-    ASBrowseIterator *iterator = [[ASBrowseIterator alloc] initWithIndex:self query:query andBlock:block];
+    ASBrowseIterator *iterator = [[ASBrowseIterator alloc] initWithIndex:self query:query cursor:nil andBlock:block];
     [iterator next];
 }
 
+-(void) browseFromCursor:(NSString*)cursor block:(BrowseIteratorHandler)block
+{
+    ASBrowseIterator *iterator = [[ASBrowseIterator alloc] initWithIndex:self query:nil cursor:cursor andBlock:block];
+    [iterator next];
+}
 
 -(AFHTTPRequestOperation *) deleteUserKey:(NSString*)key
                                   success:(void(^)(ASRemoteIndex *index, NSString *key, NSDictionary *result))success
